--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,14 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="build/font-awesome.min.css">
+  <link rel="stylesheet" href="build/froala_editor.pkgd.min.css">
+  <link rel="stylesheet" href="build/froala_style.min.css">
 </head>
 <body>
 
   <!-- Ionic's root component and where the app will load -->
-  <ion-app></ion-app>
+  <ion-app dir="rtl"></ion-app>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
