--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar color="danger">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div style="text-align: center">
+    <canvas style="width: 50px"></canvas>
+    <img src="../assets/imgs/assesment.png" style="max-width: 50px">
+    <curved-line></curved-line>
+    <img src="../assets/imgs/arthimetic.png" style="max-width: 50px">
+    <righttodown></righttodown>
+    <br>
+    <lefttodown></lefttodown>
+    <img src="../assets/imgs/assesment.png" style="max-width: 50px">
+    <curved-line></curved-line>
+    <img src="../assets/imgs/arthimetic.png" style="max-width: 50px">
+    <uptoright></uptoright>
+    <br>
+    <uptoleft></uptoleft>
+    <img src="../assets/imgs/assesment.png" style="max-width: 50px">
+    <curved-line></curved-line>
+    <img src="../assets/imgs/arthimetic.png" style="max-width: 50px">
+    <canvas style="width: 50px"></canvas>
+    <button myitem (click)="sayHello()">CLICK</button>
+    <button ion-button icon-only>
+      <ion-icon name="star" (click)="sayHello()"></ion-icon>
+
+    </button>
+  </div>
 </ion-content>
