--- a/src/pages/activation/activation.html
+++ b/src/pages/activation/activation.html
@@ -4,15 +4,19 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>activation</ion-title>
-  </ion-navbar>
+<ion-content padding style="background-color: #55acee">
+  <img src="../../assets/images/education.png">
+  <div text-center style="background-color: antiquewhite;width: 100%" text-wrap>
 
-</ion-header>
+    <ion-label>لطفا کد فعالسازی را وارد و دکمه ثبت را فشار دهید</ion-label>
+    <ion-item>
+      <ion-label color="primary">کد فعالسازی</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+    <button ion-button (click)="sendPhoneNumber()">دریافت کد فعالسازی</button>
+    <button ion-button (click)="activation()">ثبت</button>
+  </div>
 
-
-<ion-content padding>
 
 </ion-content>
