add activation and user profile

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,12 +23,8 @@
     <uptoleft></uptoleft>
     <img src="../assets/imgs/assesment.png" style="max-width: 50px">
     <curved-line></curved-line>
-    <img src="../assets/imgs/arthimetic.png" style="max-width: 50px">
+    <ion-img src="../assets/imgs/arthimetic.png" (click)="sayHello()" style="width: 50px"></ion-img>
+    <!--<img src=""  >-->
     <canvas style="width: 50px"></canvas>
-    <button myitem (click)="sayHello()">CLICK</button>
-    <button ion-button icon-only>
-      <ion-icon name="star" (click)="sayHello()"></ion-icon>
-
-    </button>
   </div>
 </ion-content>
